- Improve infrastructure to allow displaying edition tags with readable   labels. - Add seleniumrc part to the buildout. - Fix registration of intids for initial editions of a CMS. - Display flash messages in the new UI again. - Fix small bug in search and replace: occurence ID handling would break if only one   ID was submitted. - Styling details. - Get search and replace working in the new UI, improve test coverage.

--- a/src/asm/cms/static/cms.css
+++ b/src/asm/cms/static/cms.css
@@ -12,8 +12,7 @@ a img {border:none;}
 body {font-size:75%;color:#222;background:#fff;font-family:"Helvetica Neue", Arial, Helvetica, sans-serif;}
 h1, h2, h3, h4, h5, h6 {font-weight:normal;color:#111;}
 h1 {font-size:2em;line-height:1;margin-bottom:0.5em;}
-h2 {font-size:1em;margin-bottom:0.75em;font-weight:bold}
-h3 {font-size:1.5em;line-height:1;margin-bottom:1em;}
+h2, h3 {font-size:1em;margin-bottom:0.75em;font-weight:bold}
 h4 {font-size:1.2em;line-height:1.25;margin-bottom:1.25em;}
 h5 {font-size:1em;font-weight:bold;margin-bottom:1.5em;}
 h6 {font-size:1em;font-weight:bold;}
@@ -149,8 +148,11 @@ a {
     padding:1em 1.5em;
 }
 
+#page .section h2,  #page .section h3 {
+    margin-bottom:0;
+}
 
-#page .section h2 {
+#page ul {
     margin-bottom:0;
 }
 
@@ -211,7 +213,7 @@ input.close-navigation, input.open-navigation {
 }
 
 .actionbar li.selected {
-    background-color: khaki;
+    background-color: yellow;
 }
 
 .actionbar li {
@@ -231,7 +233,7 @@ div.preview {
 }
 
 span.match {
-    background-color:lightyellow;
+    background-color:yellow;
 }
 
 span.discreet {
@@ -258,7 +260,7 @@ span.discreet {
 
 .button {
     border:1px solid #ccc;
-    cursor:pointer; 
+    cursor:pointer;
     font-size:1.0em;
     line-height:16px;
     padding:3px 8px;
@@ -268,11 +270,20 @@ span.discreet {
 }
 
 .button.selected {
-    background-color: wheat;
+    background-color: yellow;
 }
 
 .button:hover {
     border:1px solid #aaa;
+}
+
+ul.messages {
+    padding:0;
+    margin:0;
+}
+
+ul.messages li {
+    margin-bottom:0;
 }
 
 .message {
@@ -305,9 +316,6 @@ a.highlight {
 }
 
 /* Search and replace */
-.search-and-replace h3 {
-    margin-bottom:0.5em;
-}
 
 .search-and-replace ul {
     list-style-type: none;
